deployment/k8s-app-candidate-deployment.yaml
###################################
# app_candidate
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate
  labels:
    app: candidate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidate
  template:
    metadata:
      labels:
        app: candidate
    spec:
      containers:
        - name: candidate
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/candidate:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-candidate
  annotations:
    cloud.google.com/backend-config: '{"default": "app-candidates-config"}'
spec:
  type: NodePort
  selector:
    app: candidate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020
---
