deployment/k8s-app-company-deployment.yaml
###################################
# app_candidate
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate
  labels:
    app: candidate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidate
  template:
    metadata:
      labels:
        app: candidate
    spec:
      containers:
        - name: candidate
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/candidate:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-candidate
  annotations:
    cloud.google.com/backend-config: '{"default": "app-candidates-config"}'
spec:
  type: NodePort
  selector:
    app: candidate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020
---
####################################
## project
####################################
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: project
#  labels:
#    app: project
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: project
#  template:
#    metadata:
#      labels:
#        app: project
#    spec:
#      containers:
#        - name: project
#          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/project:1.0
#          ports:
#            - containerPort: 3002
#          env:
#            - name: USERS_URL
#              value: http://servicio-users/
#          imagePullPolicy: Always
#---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: project-config
#spec:
#  healthCheck:
#    checkIntervalSec: 30
#    port: 3002
#    type: HTTP
#    requestPath: /routes/ping
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: servicio-project
#  annotations:
#    cloud.google.com/backend-config: '{"default": "project-config"}'
#spec:
#  type: NodePort
#  selector:
#    app: project
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 3002
#      nodePort: 31022
#---
####################################
## company_employees
####################################
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: company_employees
#  labels:
#    app: company_employees
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: company_employees
#  template:
#    metadata:
#      labels:
#        app: company_employees
#    spec:
#      containers:
#        - name: company_employees
#          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/company_employees:1.0
#          ports:
#            - containerPort: 3001
#          env:
#            - name: USERS_URL
#              value: http://servicio-users/
#          imagePullPolicy: Always
#
#---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: company_employees-config
#spec:
#  healthCheck:
#    checkIntervalSec: 30
#    port: 3001
#    type: HTTP
#    requestPath: /posts/ping
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: servicio-company_employees
#  annotations:
#    cloud.google.com/backend-config: '{"default": "company_employees-config"}'
#spec:
#  type: NodePort
#  selector:
#    app: company_employees
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 3001
#      nodePort: 31021
#---
####################################
## app_performance
####################################
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: app_performance
#  labels:
#    app: app_performance
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: app_performance
#  template:
#    metadata:
#      labels:
#        app: app_performance
#    spec:
#      containers:
#        - name: app_performance
#          image: us-central1-docker.pkg.dev/terminus-grupo25/docker-terminus25/app_performance:1.0
#          ports:
#            - containerPort: 3003
#          env:
#            - name: USERS_URL
#              value: http://servicio-users/
#          imagePullPolicy: Always
#
#---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: app_performance-config
#spec:
#  healthCheck:
#    checkIntervalSec: 30
#    port: 3003
#    type: HTTP
#    requestPath: /app_performance/ping
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: servicio-app_performance
#  annotations:
#    cloud.google.com/backend-config: '{"default": "app_performance-config"}'
#spec:
#  type: NodePort
#  selector:
#    app: app_performance
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 3003
#      nodePort: 31023
#---
