deployment/k8s-app-company-employees-deployment.yaml
###################################
# app_company_employees
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-employees
  labels:
    app: company-employees
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-employees
  template:
    metadata:
      labels:
        app: company-employees
    spec:
      containers:
        - name: company-employees
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/company-employees:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-company-employees
  annotations:
    cloud.google.com/backend-config: '{"default": "app-company-employees-config"}'
spec:
  type: NodePort
  selector:
    app: company-employees
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 31022
---
