deployment/k8s-app-contract-deployment.yaml
###################################
# app_candidate
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contracts
  labels:
    app: contracts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contracts
  template:
    metadata:
      labels:
        app: contracts
    spec:
      containers:
        - name: contract
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/contract:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-contracts
  annotations:
    cloud.google.com/backend-config: '{"default": "app-contracts-config"}'
spec:
  type: NodePort
  selector:
    app: contracts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
      nodePort: 31023
---
