deployment/k8s-app-performance-deployment.yaml
###################################
# app_candidate
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: performance
  labels:
    app: performance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: performance
  template:
    metadata:
      labels:
        app: performance
    spec:
      containers:
        - name: performance
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/performance:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3006
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-performance
  annotations:
    cloud.google.com/backend-config: '{"default": "app-performance-config"}'
spec:
  type: NodePort
  selector:
    app: performance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
      nodePort: 31026
---
