deployment/k8s-app-selection-process-deployment.yaml
###################################
# app_selection_process
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selection-process
  labels:
    app: selection-process
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selection-process
  template:
    metadata:
      labels:
        app: selection-process
    spec:
      containers:
        - name: selection-process
          image: us-central1-docker.pkg.dev/GOOGLE_PROJECT/abc-jobs-dockers/selection-process:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-app-selection-process
  annotations:
    cloud.google.com/backend-config: '{"default": "app-selection-process-config"}'
spec:
  type: NodePort
  selector:
    app: selection-process
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
      nodePort: 31030
---
