deployment/k8s-ingress-deloyment.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /candidate
        backend:
          service:
            name: servicio-app-candidate
            port:
              number: 80
      - pathType: Prefix
        path: /company
        backend:
          service:
            name: servicio-app-company
            port:
              number: 80
      - pathType: Prefix
        path: /company-employees
        backend:
          service:
            name: servicio-app-company-employees
            port:
              number: 80
      - pathType: Prefix
        path: /contracts
        backend:
          service:
            name: servicio-app-contracts
            port:
              number: 80
      - pathType: Prefix
        path: /performance
        backend:
          service:
            name: servicio-app-performance
            port:
              number: 80
      - pathType: Prefix
        path: /projects
        backend:
          service:
            name: servicio-app-projects
            port:
              number: 80
      - pathType: Prefix
        path: /search-tool
        backend:
          service:
            name: servicio-app-search-tool
            port:
              number: 80
      - pathType: Prefix
        path: /interviews
        backend:
          service:
            name: servicio-app-selection-process
            port:
              number: 80
      - pathType: Prefix
        path: /selection-process
        backend:
          service:
            name: servicio-app-selection-process
            port:
              number: 80
      - pathType: Prefix
        path: /assement
        backend:
          service:
            name: servicio-app-selection-process
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
         service:
           name: servicio-frontapp
           port:
             number: 80
